--- a/style.css
+++ b/style.css
@@ -5,13 +5,13 @@
 }
 
 body {
-    background-color: #224b48;
+    background-color: #212121;
     font-family: "Poppins", sans-serif;
     margin: 0;
 }
 
 header {
-    background-color: #193836;
+    background-color: #212121;
     display: flex;
     justify-content: flex-end;
     padding: 1rem;
@@ -19,7 +19,7 @@ header {
 
 .search {
     background-color: transparent;
-    border: 2px solid #78bcb1;
+    border: 2px solid #00CE7C;
     border-radius: 50px;
     color: #fff;
     font-family: inherit;
@@ -28,11 +28,11 @@ header {
 }
 
 .search::placeholder {
-    color: #7378c5;
+    color: #00CE7C;
 }
 
 .search:focus {
-    background-color: #224b48;
+    background-color: #021D49;
     outline: none;
 }
 
@@ -42,7 +42,7 @@ main {
 }
 
 .movie {
-    background-color: #69ad9c;
+    background-color: #00CE7C;
     border-radius: 3px;
     box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
     overflow: hidden;
